# rocketpass

./: LICENSE  README.md  index.html  package.json
src/: App.tsx  backend.tsx  main.tsx  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cryptography.rs  database.rs  error.rs  logs.rs  main.rs
src/components/: Bar.tsx  CredentialsDialog.tsx
src/pages/: Add.tsx  App.tsx  Login.tsx  Register.tsx
src/styles/: add.css  app.css  app_page.css  auth.css  bar.css  index.css  modal.css
