[package]
name = "rocketpass"
version = "1.0.0"
description = "A Tauri App"
authors = ["fer1s"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open", "window-center", "window-close", "window-hide", "window-set-cursor-icon", "window-set-cursor-visible", "window-set-decorations", "window-set-focus", "window-set-icon", "window-set-title", "window-show", "window-start-dragging"] }
openssl = "0.10"
once_cell = "1.13"
arboard = "2.1"
fern = "0.6"
log = "0.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
